# transactional-ring-buffer

./: .gitignore  .runcommandonsave  LICENSE  README.md
example/: cmakelists.txt  crc32.cpp  premake5.lua
include/: transactional-ring-buffer.h
unit_tests/: CMakeLists.txt  cmakelists.txt  premake5.lua  unit_tests.cpp
